CHANGELOG

2.0.74
UTIL:
* type=securityprofile 'actions=custom-url-category-add-ending-token:/*' - add support for token '/*

BUGFIX:

GENERAL:
* bugfixes for PHP version 8.2 - 'PHP Deprecated:  Creation of dynamic property'


2.0.73
UTIL:
* type=ssh-connector | introduction of new utility script
* type=address | introduce new 'filter=(reflocationtype is.template/is.only.template/is.devicegroup/is.only.devicegroup )'

BUGFIX:
* type=certificate | bugfix for reading hash for ec certificates

GENERAL:
* introduce PHP version validation - PHP 8.2 is NOT yet supported


2.0.72 (20230220)
UTIL:
* type=upload | improvement if in=api:// is used but no out= is defined
* type=device | actions=display-shadowrule:file.html - improvement to store full rule informtaion into html
* type=certificate | introduce 'filter=(publickey-algorithm is.rsa/is.ec) - publickey-hash is.sha1/is.sha256/is.sha384/is.sha512 - publickey-length <>!= VALUE
* type=certificate | introduce 'filter=(publickey-hash < sha256)'

BUGFIX:
* type=device | bugfix actions=display-shadowrule:file.html - to export correctly for all DG/vsys
* type=rule ruletype=defaultsecurity | bugfix to read predefined default-security-rules also if xpath post-rulebase is not set
* type=device actions=display-shadowrule | bugfix for multi-vsys
* type=device | actions=display-shadowrule devicetype=manageddevice - bugfix for html export to display correct serial/DG

GENERAL
* class Rule | improvement for type=rule 'filter=(hit-count.fast, timestamp-last-hit.fast and timestamp-first-hit.fast


2.0.71 (20230215)
UTIL:
* type=certificate | introduction of new utility script
* type=certificate | extend actions=display
* type=device | actions=display-shadowrule - extend with argument exportToexcel | actions=display-shadowrule:filename.html

BUGFIX:
* type=playbook | bugfix for missing validation of available array_key
* type=ironskilled-update | bugfix as ironskillet zpp has nothing for Alert_Only_Zone_Protection